2022/4/4 padding-top を当てるクラスと img を当てるクラスが相違してたので、修正。→ 完了

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <h2>【CSS】アスペクト比を固定して画像の縦横比を保つ方法</h2>
     <p>padding: 75%;を使用したケース</p>
     <!-- copy start -->
-    <div class="box"></div>
+    <div class="box">
+      <div class="box__img">4:3</div>
+    </div>
     <!-- copy end -->
   </div>
 </body>
