--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 
 <body>
   <div class="wrap">
-    <h2>【CSS】アスペクト比を固定して画像の縦横比を保つ方法</h2>
-    <p>padding: 75%;を使用したケース</p>
-    <!-- copy start -->
-    <div class="box">
-      <div class="box__img">4:3</div>
+    <div class="box1-1">
+      <h2>【CSS】アスペクト比を固定して画像の縦横比を保つ方法</h2>
+      <p>padding: 75%;を使用したケース</p>
+      <!-- copy start -->
+      <div class="box">
+        <div class="box__img">4:3</div>
+      </div>
+      <div class="box__contents">
+        <div class="box__contents--title">タイトルタイトル</div>
+        <div class="box__contents--text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+      </div>
     </div>
     <!-- copy end -->
   </div>
